# github_bug_data_collector

./: .gitignore  pyproject.toml  requirements.txt  setup.py
github_bug_data_collector/: data_collector.py
tests/: test_data_collector.py
