[project]
name = "github_bug_data_collector"
version = "0.1.0"
description = "A tool for collecting bug-related data from GitHub repositories."
authors = [{ name = "Wataru Zama", email = "wzama4667@gmail.com" }]

dependencies = [
    "certifi>=2024.8.30",
    "cffi>=1.17.0",
    "charset-normalizer>=3.3.2",
    "cryptography>=43.0.0",
    "Deprecated>=1.2.14",
    "idna>=3.8",
    "pycparser>=2.22",
    "PyGithub>=2.4.0",
    "PyJWT>=2.9.0",
    "PyNaCl>=1.5.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=72.1.0",
    "typing_extensions>=4.12.2",
    "urllib3>=2.2.2",
    "wheel>=0.43.0",
    "wrapt>=1.16.0"
]