[tool.poetry]
name = "github-bug-data-collector"
version = "0.1.0"
description = ""
authors = ["Wataru Zama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.1.2"
pandas = "2.2.3"
pygithub = "2.4.0"
setuptools = "75.1.0"
tqdm = "4.66.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
